patch horizontal scroll on hero page + fix about pitch animation

--- a/src/scss/blocs/hero.scss
+++ b/src/scss/blocs/hero.scss
@@ -69,6 +69,13 @@
     }
   }
 
+  &__imgs {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
   &__img {
     position: absolute;
     z-index: -1;
